# AI-Game-Recommendation-System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest_output.txt
.pytest_tmp/test_health_endpoint0/chroma/: chroma.sqlite3
.pytest_tmp/test_jsonl_round_trip0/: games.jsonl
.pytest_tmp/test_langchain_tool_manifest0/chroma/: chroma.sqlite3
.pytest_tmp/test_loader_generates_missing_0/: missing.jsonl
.pytest_tmp/test_recommend_endpoint0/: games.jsonl
.pytest_tmp/test_recommend_endpoint0/chroma/: chroma.sqlite3
.pytest_tmp/test_tool_methods_return_groun0/chroma/: chroma.sqlite3
docs/: API.md
gamemind/: __init__.py  dependencies.py  main.py  schemas.py
gamemind/agents/: __init__.py  tools.py
gamemind/api/: __init__.py  routes.py
gamemind/core/: config.py  errors.py  logging.py
gamemind/data/: __init__.py  loader.py  synthetic.py
gamemind/domain/: models.py
gamemind/rag/: vector_store.py
gamemind/services/: embeddings.py  game_repository.py  preferences.py  ranker.py  recommendation.py
scripts/: evaluate.py  generate_dataset.py  ingest_games.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_dataset.py  test_embeddings.py  test_errors.py  test_preferences.py  test_ranker.py  test_repository.py  test_tools.py
